# magic-vibe

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: admin.py  cards.py  collection.py  collections.py  decks.py  import_data.py  workspace.py
backend/app/core/: config.py
backend/app/db/: app_data_base.py  app_data_session.py  init_app_data_db.py  init_db.py  session.py  user_data_base.py  user_data_session.py
backend/app/models/: __init__.py  app_data.py  card.py  collection.py  deck.py  user_data.py
backend/app/schemas/: admin.py  card.py  collection.py  deck.py  workspace.py
backend/app/services/: catalog.py  catalog_download.py  catalog_import.py  catalog_source_index.py  delver_lens_import.py  delver_lens_mapping.py  scryfall.py  user_data.py
backend/tests/: test_admin_api.py  test_app_data_db.py  test_catalog_download.py  test_catalog_import.py  test_collection_and_deck_api.py  test_delver_lens_import.py  test_user_data_db.py  test_workspace_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  styles.css
frontend/src/app/: router.ts
frontend/src/components/: CardPrintingSelectors.vue  ScryfallSymbolsText.vue  SearchFieldToggle.vue  WorkspacePaginator.vue
frontend/src/pages/: AdminPage.vue  CardsPage.vue  CardsWorkflowComparePage.vue  CollectionPage.vue  CollectionWorkspacePage.vue  DecksPage.vue  ImportPage.vue  PlayersPage.vue
frontend/src/shared/: api.ts  scryfallSymbols.ts
(+3 files in other folders)
